:construction: début de la page d'accueil

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,14 @@
         {% endblock %}
     </head>
     <body>
+        {% block navbar %}
+            {% include '/_includes/navbar.html.twig' %}
+        {% endblock %}
+
         {% block body %}{% endblock %}
+
+        {% block footer %}
+            {% include '/_includes/footer.html.twig' %}
+        {% endblock %}
     </body>
 </html>
