--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,13 +3,16 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/leo/Bureau/H.O.P.E/H.O.P.E/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>/home/leo/Bureau/H.O.P.E/H.O.P.E/templates/home/index.html.twig</code></li>
-    </ul>
-</div>
+    <header>
+        <h1>BLABLABLA JE SUIS LE HEADER</h1>
+    </header>
+    <section>
+        <h1>BLABLABLA JE SUIS LA PREMIERE SECTION</h1>
+    </section>
+    <section>
+        <h1>BLABLABLA JE SUIS LA DEUXIEME SECTION</h1>
+    </section>
+    <section>
+        <h1>BLABLABLA JE SUIS LA TROISIEME SECTION</h1>
+    </section>
 {% endblock %}
