--- a/templates/_includes/navbar.html.twig
+++ b/templates/_includes/navbar.html.twig
@@ -8,21 +8,21 @@
 
     <div class="d-flex align-items center gap-3">
         <div>
-            <a href="">
+            <a href="/discover">
                 <button class="btn btn-light rounded-pill">
                     Découvrir H.O.P.E
                 </button>
             </a>
         </div>
         <div>
-            <a href="">
+            <a href="/resources">
                 <button class="btn btn-light rounded-pill">
                     Ressources éducatives
                 </button>
             </a>
         </div>
         <div>
-            <a href="">
+            <a href="/offers">
                 <button class="btn btn-light rounded-pill">
                     Offres
                 </button>
