:sparkles: ajout de l'inscription

--- a/templates/_includes/navbar.html.twig
+++ b/templates/_includes/navbar.html.twig
@@ -29,14 +29,14 @@
             </a>
         </div>
         <div>
-            <a href="">
+            <a href="{{ path('app_login') }}">
                 <button class="btn btn-light rounded-pill">
                     Se connecter
                 </button>
             </a>
         </div>
         <div>
-            <a href="">
+            <a href="{{ path('app_inscription') }}">
                 <button class="btn btn-light rounded-pill">
                     S'inscrire
                 </button>
