--- a/templates/user/connection.html.twig
+++ b/templates/user/connection.html.twig
@@ -19,7 +19,7 @@
             {% endif %}
             <div class="mb-3">
                 <label for="name-user" class="form-label">name</label>
-                <input type="text" class="form-control" id="name-user" name="name-user" required>
+                <input type="text" value="{{ last_username }}" class="form-control" id="name-user" name="name-user" required>
             </div>
             <div class="mb-3">
                 <label for="pswd-user" class="form-label">Password</label>
