--- a/templates/_includes/navbar.html.twig
+++ b/templates/_includes/navbar.html.twig
@@ -28,19 +28,36 @@
                 </button>
             </a>
         </div>
-        <div>
-            <a href="{{ path('app_login') }}">
-                <button class="btn btn-light rounded-pill">
-                    Se connecter
-                </button>
-            </a>
-        </div>
-        <div>
-            <a href="{{ path('app_inscription') }}">
-                <button class="btn btn-light rounded-pill">
-                    S'inscrire
-                </button>
-            </a>
-        </div>
+        {% if app.user %}
+            <div>
+                <a href="">
+                    <button class="btn btn-light rounded-pill">
+                        Profil
+                    </button>
+                </a>
+            </div>
+            <div>
+                <a href="{{ path('app_logout') }}">
+                    <button class="btn btn-light rounded-pill">
+                        Se déconnecter
+                    </button>
+                </a>
+            </div>
+        {% else %}
+            <div>
+                <a href="{{ path('app_login') }}">
+                    <button class="btn btn-light rounded-pill">
+                        Se connecter
+                    </button>
+                </a>
+            </div>
+            <div>
+                <a href="{{ path('app_inscription') }}">
+                    <button class="btn btn-light rounded-pill">
+                        S'inscrire
+                    </button>
+                </a>
+            </div>
+        {% endif %}
     </div>
 </nav>
