--- a/templates/_includes/footer.html.twig
+++ b/templates/_includes/footer.html.twig
@@ -1,90 +1,49 @@
-<footer class="text-center text-lg-start bg-body-tertiary text-muted">
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-        <div class="me-5 d-none d-lg-block">
-            <span>Get connected with us on social networks:</span>
-        </div>
-
-        <div class="d-flex align-items center gap-3">
-            <a href="" class="me-4 text-reset">
-                <i class="fa-brands fa-facebook"></i>
+<footer class="bg-primary text-white py-5">
+    <div class="container">
+        <div class="d-flex justify-content-end">
+            <a href="#" class="text-white me-3">
+                <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fa-brands fa-twitter"></i>
+            <a href="#" class="text-white me-3">
+                <i class="fa-brands fa-facebook fa-2x"></i>
             </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fa-brands fa-linkedin"></i>
+            <a href="#" class="text-white">
+                <i class="fab fa-instagram fa-2x"></i>
             </a>
         </div>
-    </section>
-
-    <section class="">
-        <div class="container text-center text-md-start mt-5">
-            <div class="row mt-3">
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fas fa-gem me-3"></i>H.O.P.E
-                    </h6>
-                    <p>
-                        Here you can use rows and columns to organize your footer content. Lorem ipsum
-                        dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                </div>
-
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Products
-                    </h6>
-                    <p>
-                        <a href="#!" class="text-reset">Angular</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">React</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Vue</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Laravel</a>
-                    </p>
-                </div>
-
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Useful links
-                    </h6>
-                    <p>
-                        <a href="#!" class="text-reset">Pricing</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Settings</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Orders</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Help</a>
-                    </p>
-                </div>
-
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                    <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
-                    <p>
-                        <i class="fas fa-envelope me-3"></i>
-                        info@example.com
-                    </p>
-                    <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                    <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
-                </div>
+        <div class="row">
+            <!-- Logo et description -->
+            <div class="col-md-3">
+                <img src="/images/logo_transparent.svg" class="w-75">
+            </div>
+            <div class="col-md-3 d-flex flex-column align-items-center">
+                <h1>HOPE</h1>
+                <p>
+                    HOPE est une plateforme éducative qui vous aide à naviguer dans les études et offres éducatives.
+                    Créez des modules interactifs, des consultations et adoptez un large éventail de services en ligne tout en gardant vos données en sécurité.
+                </p>
+            </div>
+            <!-- Liens -->
+            <div class="col-md-3 d-flex flex-column align-items-center">
+                <h5>Découvrir Hope</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Ressources éducatives</a></li>
+                    <li><a href="#" class="text-white">Offres</a></li>
+                    <li><a href="#" class="text-white">Connexion / Inscription</a></li>
+                    <li><a href="#" class="text-white">Service après vente</a></li>
+                    <li><a href="#" class="text-white">Politique de confidentialité</a></li>
+                </ul>
+            </div>
+            <!-- Contact et réseaux sociaux -->
+            <div class="col-md-3">
+                <h5 class="ms-5">Contacts</h5>
+                <p>
+                    50 rue de la création,<br>
+                    Montpellier 34000<br>
+                    <a href="mailto:hope@contact.fr" class="text-white">hope@contact.fr</a><br>
+                    04 34 12 00 02
+                </p>
             </div>
         </div>
-    </section>
-
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2024 Copyright:
-        <a class="text-reset fw-bold">LA TEAM</a>
     </div>
 </footer>
