--- a/templates/_includes/navbar.html.twig
+++ b/templates/_includes/navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg position-sticky top-0 z-2">
+<nav class="navbar navbar-expand-lg bg-white position-sticky top-0 z-2">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="/images/logo_transparent.svg" alt="Logo" class="img-fluid w-25">
