--- a/templates/_includes/footer.html.twig
+++ b/templates/_includes/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="bg-primary text-white py-5">
+<footer class="bg-purple text-white py-5">
     <div class="container">
         <div class="d-flex justify-content-end">
             <a href="#" class="text-white me-3">
@@ -14,7 +14,7 @@
         <div class="row">
             <!-- Logo et description -->
             <div class="col-md-3">
-                <img src="/images/logo_transparent.svg" class="w-75">
+                <img src="/images/LogoFooter.png" class="w-75">
             </div>
             <div class="col-md-3 d-flex flex-column align-items-center">
                 <h1>HOPE</h1>
