--- a/templates/user/connection.html.twig
+++ b/templates/user/connection.html.twig
@@ -4,12 +4,10 @@
 
 {% block body %}
 <div class="d-flex">
-    <!-- Partie gauche avec le visuel -->
     <div class="left-section" style="background-color: #665EFF; width: 50%; display: flex; align-items: center; justify-content: center;">
         <img src="/images/connexion_image.png" alt="Connexion HOPE" class="img-fluid">
     </div>
 
-    <!-- Partie droite avec le formulaire -->
     <div class="right-section" style="width: 50%; padding: 4rem; background-color: #f8f9fa;">
         <h1 style="color: #343A40; font-family: 'Roboto', sans-serif;">Connexion</h1>
 
@@ -25,14 +23,14 @@
             {% endif %}
 
             <div class="form-group mb-4">
-                <label for="email" class="form-label">E-mail</label>
-                <input type="email" value="{{ last_username }}" class="form-control" id="email" name="_username" required autofocus>
+                <label for="name" class="form-label">Nom</label>
+                <input type="text" value="{{ last_username }}" class="form-control" id="name" name="name-user" required autofocus>
             </div>
 
             <div class="form-group mb-4">
                 <label for="password" class="form-label">Mot de passe</label>
                 <div class="input-group">
-                    <input type="password" class="form-control" id="password" name="_password" required>
+                    <input type="password" class="form-control" id="password" name="pswd-user" required>
                     <span class="input-group-text">
                         <i class="bi bi-eye" onclick="togglePasswordVisibility()"></i>
                     </span>
