--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="d-flex align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
-                    <img src="/images/LogoFooter.png" class="w-50" alt="logo">
+                    <img src="/images/LogoSection.png" class="w-75" alt="logo">
                 </div>
 
                 <div class="d-flex flex-column">
