--- a/templates/user/connection.html.twig
+++ b/templates/user/connection.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
 <div class="d-flex">
-    <div class="left-section" style="background-color: #665EFF; width: 50%; display: flex; align-items: center; justify-content: center;">
-        <img src="/images/connexion_image.png" alt="Connexion HOPE" class="img-fluid">
+    <div class="left-section w-50 d-flex align-items-center justify-content-center" style="background-color: #665EFF;">
+        <img src="/images/log.png" alt="Connexion HOPE" class="img-fluid">
     </div>
 
     <div class="right-section" style="width: 50%; padding: 4rem; background-color: #f8f9fa;">
