--- a/templates/user/inscription.html.twig
+++ b/templates/user/inscription.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
 <div class="d-flex">
-    <div class="left-section" style="background-color: #665EFF; width: 50%; display: flex; align-items: center; justify-content: center;">
-        <img src="/images/inscription_image.png" alt="Inscription HOPE" class="img-fluid">
+    <div class="left-section w-50 d-flex align-items-end justify-content-center" style="background-color: #665EFF;">
+        <img src="/images/log.png" alt="Inscription HOPE" class="img-fluid">
     </div>
 
     <div class="right-section" style="width: 50%; padding: 4rem; background-color: #f8f9fa;">
